--- a/css/my-login.css
+++ b/css/my-login.css
@@ -4,16 +4,18 @@ html,body {
 
 body.my-login-page {
 	background-color: #f7f9fb;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 }
 
 .my-login-page .brand {
-	width: 90px;
-	height: 90px;
 	overflow: hidden;
-	border-radius: 50%;
-	margin: 40px auto;
-	box-shadow: 0 4px 8px rgba(0,0,0,.05);
+	height: 20%;
+	width: 60%;
+	margin-top: 50px;
+	margin-bottom: 10px;
+	margin-left: 70px;
+	margin-right: 60px;
 	position: relative;
 	z-index: 1;
 }
